2005-09-13 Jens Tkotz <jens@peino.de> 1.5.1-RC4-cvs-b6

	* Change: Added paramater to gallery_mail() to send mail as HTML-mail.

	* Fix: Make comment emails HTML-mails, so links work correctly.

2005-09-12 Dariush Molavi <dari@nukedgallery.net> 1.5.1-RC4-cvs-b5

	* Change: New address for Free Software Foundation in GPL header.

2005-09-12 Jens Tkotz <jens@peino.de> 1.5.1-RC4-cvs-b4

	* New: Added function urlIsrelative().

	* Fix: Relative URL in $gallery->app->photoAlbumURL did not longer work,
	       due to new full url schema added in
               1.5.1-RC2-cvs-b14 + 1.5.1-RC3-cvs-b3.

	* Fix: $name is not set when Gallery is startpage in *Nuke.
	       So we try to extract it from $modpath.

	* Fix: Url in stats-wizard was not generated on first load when embedded.

2005-09-12 Rasmus Lerdorf 1.5.1-RC4-cvs-b3

	* Fix: Some functions taking arguments by reference for no real reason
	       in gallery_remote2.php.
	       It breaks under the latest versions of PHP because
	       the reference checking has improved.

2005-09-08 Jens Tkotz <jens@peino.de> 1.5.1-RC4-cvs-b2

	* "Fix": As we use now (1.5.1-RC3-cvs-b12) verbose output for exifdata, 
	   we now show only fields WITH data.

2005-09-08 Jens Tkotz <jens@peino.de> 1.5.1-RC4-cvs-b1

	* Fix: Issues with setup/functions.inc which not longer exists.

2005-08-29  Chris Kelly <ckdake@users.sf.net> 1.5.1-RC3

	* Release: 1.5.1-RC3

2005-08-29 Jens Tkotz <jens@peino.de> 1.5.1-RC3-cvs-b15

	* Fix: Poll Properties were not set recursively.

2005-08-29 Jens Tkotz <jens@peino.de> 1.5.1-RC3-cvs-b14
	
	* Merged b12 and b13, language syncronisation for RC3.

2005-08-24 Jay Rossiter <cryptographite@users.sf.net> 1.5.1-RC3-cvs-b13

	* Fix: Prevent file exposure bug in stats module (thanks to ilia)

2005-08-23 Jay Rossiter <cryptographite@users.sf.net> 1.5.1-RC3-cvs-b12

	* Fix: Prevent HTML tags inside EXIF info from being displayed without
	  escaping.

2005-08-19 Jens Tkotz <jens@peino.de> 1.5.1-RC3-cvs-b11
