@@ -1,3 +1,11 @@
+2005-09-15 Jens Tkotz <jens@peino.de> 1.5.1-RC4-cvs-b7
+
+	* Fix: Turn of verbose display of exifdata with jhead.
+	       This caused problems as verbosed data has different structure.
+	
+	* Fix: First line of exifdata was always removed,
+	       regardless wether jhead or exiftags is used.
+
 2005-09-13 Jens Tkotz <jens@peino.de> 1.5.1-RC4-cvs-b6
 
 	* Change: Added paramater to gallery_mail() to send mail as HTML-mail.
